// Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
package com.daml.ledger.participant.state.kvutils.wire;
option java_package = "com.daml.ledger.participant.state.kvutils.wire";
option java_multiple_files = true;
option csharp_namespace = "Com.Daml.Ledger.Participant.State.KVUtils.Wire";

import "com/daml/ledger/participant/state/kvutils/store/state.proto";
import "com/daml/ledger/participant/state/kvutils/store/events/package_upload.proto";
import "com/daml/ledger/participant/state/kvutils/store/events/party_allocation.proto";
import "com/daml/ledger/participant/state/kvutils/store/events/transaction.proto";
import "com/daml/ledger/participant/state/kvutils/wire/configuration_submission.proto";

// A submission to the ledger: a payload and its inputs if any.
// Produced by [[KeyValueSubmission]].
// Transformed into `DamlLogEntry` when committed.
message DamlSubmission {
  repeated com.daml.ledger.participant.state.kvutils.store.DamlStateKey input_daml_state = 1;
  oneof payload {
    com.daml.ledger.participant.state.kvutils.store.events.DamlTransactionEntry transaction_entry = 2;
    com.daml.ledger.participant.state.kvutils.store.events.DamlPackageUploadEntry package_upload_entry = 3;
    DamlConfigurationSubmission configuration_submission = 4;
    com.daml.ledger.participant.state.kvutils.store.events.DamlPartyAllocationEntry party_allocation_entry = 5;
  }
  bytes submission_seed = 6;
}

// A batch of enveloped [[DamlSubmission]]'s.
message DamlSubmissionBatch {
  message CorrelatedSubmission {
    bytes submission = 1;
    string correlation_id = 2;
  }

  repeated CorrelatedSubmission submissions = 2;
}
